# code_samples

./: .gitignore
concurrency/lockfree_vector/: Cargo.toml  README.md
concurrency/lockfree_vector/src/: bench.rs  descriptor.rs  lib.rs  log.rs  strategy.rs
concurrency/seqlock/: seqlock.rs
concurrency/sto_transactional_locking/: TransactionManager.cpp  lockable_item.cpp  testing.cpp
cpp_patterns/: visitor.cpp
cpp_patterns/my_shared_ptr/: Makefile  README  mysharedptr.h  myweakptr.h  test_mysharedptr.cpp  test_myweakptr.cpp
hacking/kernel_shmem_hack/: Makefile  kernel_hack.c  target_process.c
interview_puzzles/simd/: firewall.hpp  tests.cpp
kernel_module/nonblocking_proc_reader/: Makefile  cat_noblock.c  sleep.c
kernel_module/pagefault/: Makefile  README  page_fault.c
kernel_module/pagefault_user/: Makefile  user_pagefault.c
puzzles/simd/: Makefile  firewall.hpp
rust_algo/aho_corasick_string_find/: aho_corasick.rs
rust_algo/distrete_fourier_transform/: Cargo.toml
rust_algo/fourier_transform/: Cargo.toml
rust_algo/fourier_transform/src/: blur_image.rs  ft_by_hand.rs  main.rs
rust_algo/kruskals_minimum_spanning_tree/: kruskals_minimum_spanning_tree.rs
rust_algo/merge_sort/: merge_sort.rs
rust_algo/minimum_spanning_tree/: Cargo.toml  boruvka_mst.rs
rust_algo/mirror_binary_tree/: mirror_binary_tree.rs
rust_algo/prims_minimum_spanning_tree/: prims_minimum_spanning_tree  prims_minimum_spanning_tree.rs
rust_algo/seqlock/: Makefile  seqlock.rs
rust_algo/tricks/: bitwise_xor_find_missing.rs  bitwise_xor_find_repeating.rs
rust_web/rust_crud/: Cargo.toml  README  my_env
rust_web/rust_crud/migrations/2021-09-12-141717_create_employees/: up.sql
rust_web/rust_crud/src/: db.rs  error_handler.rs  main.rs  schema.rs
rust_web/rust_crud/src/employees/: mod.rs  model.rs  route.rs
sto_transactional_locking/: CMakeLists.txt  README.md  TransactionManager.cpp  TransactionManager.h  lockable_item.h
sudoku/sudoku_solver/: Makefile  (+5 more)
virtual_joystick_linux/: Makefile  read_mouse.c  virtual_joystick.c
(+17 files in other folders)
