cargo-features = ["edition2021"]
[features]
nightly = []
default = ["nightly"]

[package]
name = "lockfree_vector"
version = "0.1.0"
edition = "2021"
[lib]
name = "lockfree_vec_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3
