cargo-features = ["edition2021"]
[features]
nightly = []
default = ["nightly"]

[package]
name = "lockfree_vector"
version = "0.1.0"
edition = "2021"
[lib]
name = "lockfree_vec_lib"
path = "src/lib.rs"


[dependencies]
crossbeam-epoch = "0.9"
crossbeam-queue = "0.3"
once_cell = "1.17.2"

[profile.dev]
opt-level = 3
debug-assertions = false
debug = true

[profile.bench]
opt-level = 3
debug-assertions = false
debug = true

[profile.test]
opt-level = 3
debug-assertions = false
debug = true

[profile.release]
opt-level = 3
debug-assertions = false
debug = false

