[package]
name = "rust_crud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
#tokio = "1.11.0"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
lazy_static = "1.4"
diesel = { version = "1.4", features = ["sqlite", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
listenfd = "0.3"
env_logger = "0.6"
uuid = { version = "0.6", features = ["serde", "v4"] }
